# owners-manual-assistant

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/skills/add-manual/: SKILL.md
.opencode/skills/add-manual/scripts/: add-manual.sh
.opencode/skills/bulk-ingest/: SKILL.md
.opencode/skills/bulk-ingest/scripts/: bulk-ingest.sh
docs/: plan.md  spec.md
docs/issues/: TEMPLATE.md  improve-ui.md
manuals_app/: db.py  ingest.py  mcp_server.py  search.py  web_ui.py
manuals_app/templates/: results.html  search.html
tests/: conftest.py  test_db.py  test_ingest.py  test_mcp_server.py  test_search.py  test_web_ui.py
